--- a/alle/index.html
+++ b/alle/index.html
@@ -75,7 +75,7 @@
 
         <!-- SUCHLEISTE (mittig, volle Größe wie vorher) -->
         <div class="search-wrapper flex justify-center">
-            <div class="relative w-full lg:w-[1100px]">
+            <div class="relative w-full lg:max-w-[900px] mx-auto">
                 <input id="search-input" type="text" placeholder="Angebote durchsuchen..."
                        class="w-full h-12 px-4 pr-12 border border-slate-200 rounded-md bg-slate-50 
                               focus:bg-white focus:outline-none focus:ring-2 focus:ring-mio-primary transition" />
